Fix overflow

--- a/frontend/src/modules/details-page/stakeholder-carousel.scss
+++ b/frontend/src/modules/details-page/stakeholder-carousel.scss
@@ -4,8 +4,7 @@
   margin-top: 27px;
   z-index: 2;
   .connection-carousel {
-    overflow-y: visible;
-    overflow-x: clip;
+    padding-top: 16px;
     position: relative;
     z-index: 2;
 
